--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.28.2"
 black = "^22.12.0"
 pre-commit = "^2.21.0"
 commitizen = "^2.39.1"
+mkdocs-material = "^9.0.5"
 
 [build-system]
 requires = ["poetry-core"]
