feat: 调整项目目录

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["wn <320753691@qq.com>"]
 readme = "README.md"
-packages = [{include = "src"}]
+packages = [{include = "wedoc"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
