--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wedoc"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["wn <320753691@qq.com>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ black = "^22.12.0"
 pre-commit = "^2.21.0"
 commitizen = "^2.39.1"
 mkdocs-material = "^9.0.5"
+python-dotenv = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
