--- a/.drone.yml
+++ b/.drone.yml
@@ -13,9 +13,9 @@ steps:
   - name: python
     image: python:3.10
     commands:
-      - pip install poetry
+      - pip install poetry -i https://pypi.douban.com/simple
       - poetry export -f requirements.txt --output requirements.txt --without-hashes --with dev
-      - pip install requirements.txt -i https://pypi.douban.com/simple
+      - pip install -r requirements.txt -i https://pypi.douban.com/simple
       - mkdocs build
   - name: build-dist
     image: python:18
