ci: 修改 pypi 推送配置

--- a/.drone.yml
+++ b/.drone.yml
@@ -83,7 +83,7 @@ steps:
         from_secret: pypi_user
       password:
         from_secret: pypi_password
-      skip_build: false
+      skip_build: true
   - name: dingtalk
     image: lddsb/drone-dingtalk-message
     settings:
