build: 设置通过 tag 触发构建

--- a/.drone.yml
+++ b/.drone.yml
@@ -96,4 +96,8 @@ steps:
       status: [failure, success]
 
 trigger:
-  branch: master
+  branch:
+    - master
+  ref:
+    include:
+    - refs/tags/*
