feat: 增加接口文档, 修改缓存策略

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,3 +41,13 @@ nav:
   - 参考:
       - 参考文档: ref.md
       - API 接口: api.md
+
+plugins:
+  - search
+  - mkdocstrings:
+      handlers:
+        python:
+          import:
+            - https://docs.python-requests.org/en/master/objects.inv
+          options:
+            do_something: true
