--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wedoc"
-version = "0.1.22"
+version = "0.1.23"
 description = "企业微信文档接口, 包括文档的创建, 删除, 以及表格的操作"
 authors = ["wn <320753691@qq.com>"]
 readme = "README.md"
@@ -26,7 +26,7 @@ pre-commit = "^2.21.0"
 commitizen = "^2.39.1"
 mkdocs-material = "^9.0.5"
 python-dotenv = "^0.21.0"
-
+mkdocstrings-python = "^0.8.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
